--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
+    "grunt": "^0.4.5",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
-    "strong-express-metrics": "^1.1.0",
-    "serve-favicon": "^2.0.1"
+    "serve-favicon": "^2.0.1",
+    "strong-express-metrics": "^1.1.0"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "grunt-contrib-jshint": "^0.11.2",
+    "load-grunt-tasks": "^3.2.0"
   },
   "repository": {
     "type": "",
