--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "safe-food",
-  "version": "1.0.0",
-  "main": "server/server.js",
-  "scripts": {
-    "pretest": "jshint ."
+  "description": "Provides info about food recalls based on OpenFDA (https://open.fda.gov/)",
+  "version": "0.0.1",
+  "author": {
+      "name":"Incentive Technology Group",
+      "email":"",
+      "url":"http://www.itgfirm.com"
   },
+  "homepage": "",
+  "contributors": [
+    "Phil Armour <phillip.armour@itgfirm.com>"
+  ],
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
@@ -23,9 +29,10 @@
     "grunt-contrib-jshint": "^0.11.2",
     "load-grunt-tasks": "^3.2.0"
   },
+  "main": "server/server.js",
   "repository": {
-    "type": "",
-    "url": ""
+    "type": "git",
+    "url": "git://github.com/itgfirm/safe-food"
   },
-  "description": "safe-food"
+  "scripts": {}
 }
