--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Provides info about food recalls based on OpenFDA (https://open.fda.gov/)",
   "version": "0.0.1",
   "author": {
-      "name":"Incentive Technology Group",
-      "email":"",
-      "url":"http://www.itgfirm.com"
+    "name": "Incentive Technology Group",
+    "email": "",
+    "url": "http://www.itgfirm.com"
   },
   "homepage": "",
   "contributors": [
@@ -26,13 +26,22 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
+    "chai": "^3.0.0",
+    "chai-as-promised": "^5.1.0",
+    "colors": "^1.1.2",
     "grunt-contrib-jshint": "^0.11.2",
-    "load-grunt-tasks": "^3.2.0"
+    "load-grunt-tasks": "^3.2.0",
+    "lodash": "^3.9.3",
+    "mocha": "^2.2.5",
+    "selenium-webdriver": "^2.46.1",
+    "wd": "^0.3.12"
   },
   "main": "server/server.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/itgfirm/safe-food"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "mocha --timeout 10000 server/test/*.js"
+  }
 }
