Setup karma/jasmine for frontend unit testing. Modified Gruntfile to execute tests.

--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
     "chai-as-promised": "^5.1.0",
     "colors": "^1.1.2",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-karma": "^0.11.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.36",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
     "load-grunt-tasks": "^3.2.0",
     "lodash": "^3.9.3",
     "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17",
     "selenium-webdriver": "^2.46.1",
     "wd": "^0.3.12"
   },
