--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,8 @@
 		"angular": "latest",
 		"bootstrap": "3.2.0",
 		"angular-route": "latest"
-	}
+	},
+	"devDependencies": {
+    	"angular-mocks": "^1.3.0"
+  	}
 }
