--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js:
 - '0.12'
 before_install: npm install -g grunt-cli
-install: npm install
+install: 
+	- npm install
+	- bower install
 before_script:
 - grunt
 - python -m SimpleHTTPServer &
