--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install: npm install -g grunt-cli
 
 install:
 - npm install
+- npm install -g bower
 - bower install
 before_script:
 - grunt
