updated the grunt file to do all tests in a single grunt task

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "safe-food",
   "description": "Provides info about food recalls based on OpenFDA (https://open.fda.gov/)",
   "version": "0.0.1",
+  "license": "MIT",
   "author": {
     "name": "Incentive Technology Group",
     "email": "",
@@ -31,6 +32,7 @@
     "colors": "^1.1.2",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-karma": "^0.11.1",
+    "grunt-mocha-test": "^0.12.7",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.36",
     "karma-jasmine": "^0.3.5",
@@ -48,6 +50,6 @@
     "url": "git://github.com/itgfirm/safe-food"
   },
   "scripts": {
-    "test": "mocha --timeout 10000 server/test/*.js"
+    "test": "grunt test"
   }
 }
