--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 client/vendor
+
+# client build directories
+/client-dist
+/.tmp
+
+# server test output
+results.txt
+
+####
+.DS_Store
