--- a/.jshintrc
+++ b/.jshintrc
@@ -1,21 +1,26 @@
 {
-  "node": true,
-  "esnext": true,
   "bitwise": true,
+  "browser": true,
   "camelcase": true,
   "eqeqeq": true,
   "eqnull": true,
+  "esnext": true,
   "immed": true,
   "indent": 2,
   "latedef": "nofunc",
   "newcap": true,
   "nonew": true,
   "noarg": true,
+  "node": true,
   "quotmark": "single",
   "regexp": true,
   "undef": true,
-  "unused": false,
+  "unused": true,
   "trailing": true,
   "sub": true,
-  "maxlen": 80
+  "maxlen": 80,
+  "globals": {
+    "angular": true,
+    "define": true
+  }
 }
