--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,20 @@
 {
-	"name": "safeFoodApp",
-	"version": "1.0.0",
-	"dependencies": {
-		"angular": "latest",
-		"bootstrap": "3.2.0",
-		"angular-route": "latest"
-	},
-	"devDependencies": {
-    	"angular-mocks": "^1.3.0"
-  	}
+  "name": "safe-food",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "^1.3.0",
+    "angular-animate": "^1.3.0",
+    "angular-aria": "^1.3.0",
+    "angular-route": "^1.3.0",
+    "angular-touch": "^1.3.0",
+    "bootstrap": "^3.2.0",
+    "requirejs": "^2.1.0",
+    "angular-material": "~0.10.0",
+    "angular-ui-router": "~0.2.15"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.3.0"
+  },
+  "appPath": "client",
+  "moduleName": "safeFoodApp"
 }
