--- a/package.json
+++ b/package.json
@@ -27,20 +27,43 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^2.0.0",
+    "grunt-bower-requirejs": "^2.0.0",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.12.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.11.1",
+    "grunt-newer": "^1.1.0",
+    "grunt-ng-annotate": "^0.9.2",
+    "grunt-requirejs": "^0.4.2",
+    "grunt-svgmin": "^2.0.0",
+    "grunt-usemin": "^3.0.0",
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^1.0.0",
+    "karma-jasmine": "^0.3.5",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-ng-scenario": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-requirejs": "^0.2.2",
+    "load-grunt-tasks": "^3.1.0",
+    "phantomjs": "^1.9.17",
+    "requirejs": "^2.1.18",
+    "time-grunt": "^1.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "colors": "^1.1.2",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-karma": "^0.11.1",
     "grunt-mocha-test": "^0.12.7",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.12.36",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "load-grunt-tasks": "^3.2.0",
     "lodash": "^3.9.3",
     "mocha": "^2.2.5",
-    "phantomjs": "^1.9.17",
     "selenium-webdriver": "^2.46.1",
     "wd": "^0.3.12"
   },
