--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "bootstrap": "^3.2.0",
     "requirejs": "^2.1.0",
     "angular-material": "~0.10.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "ngmap": "~1.7.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
