--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "url": "git://github.com/itgfirm/safe-food"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "start": "node server/server.js",
+    "postinstall": "grunt build"
   }
 }
