added bower install the postinstall command to correct missing dependencies for grunt build

--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
   "scripts": {
     "test": "grunt test",
     "start": "node server/server.js",
-    "postinstall": "grunt build"
+    "postinstall": "bower cache clean && bower install && grunt build"
   }
 }
