--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "Phil Armour <phillip.armour@itgfirm.com>"
   ],
   "dependencies": {
+    "bower": "^1.4.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
@@ -27,7 +29,6 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
