--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "node server/server.js",
-    "postinstall": "bower cache clean && bower install && grunt build"
+    "start": "node server/server.js"
   }
 }
