--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install"
   }
 }
