--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-food",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
@@ -11,7 +11,7 @@
     "requirejs": "^2.1.0",
     "angular-material": "~0.10.0",
     "angular-ui-router": "~0.2.15",
-    "ngmap": "~1.7.11"
+    "fontawesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
