--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
     "serve-favicon": "^2.0.1",
-    "strong-express-metrics": "^1.1.0"
+    "strong-express-metrics": "^1.1.0",
+    "newrelic": "^1.20.2"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
