--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "fontawesome": "~4.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "angular-bootstrap": "~0.13.0"
   },
   "appPath": "client",
   "moduleName": "safeFoodApp"
