--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "requirejs": "^2.1.0",
     "angular-material": "~0.10.0",
     "angular-ui-router": "~0.2.15",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "ngtoast": "~1.5.4",
+    "angular-sanitize": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
