--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
   "bitwise": true,
   "browser": true,
-  "camelcase": true,
+  "camelcase": false,
   "eqeqeq": true,
   "eqnull": true,
   "esnext": true,
