--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "tota11y": "~0.0.3"
   },
   "appPath": "client",
   "moduleName": "safeFoodApp"
