--- a/bower.json
+++ b/bower.json
@@ -3,17 +3,16 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "^1.3.0",
-    "angular-animate": "^1.3.0",
     "angular-aria": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
+    "angular-sanitize": "^1.3.0",
     "bootstrap": "^3.2.0",
     "requirejs": "^2.1.0",
     "angular-material": "~0.10.0",
     "angular-ui-router": "~0.2.15",
     "fontawesome": "~4.3.0",
-    "ngtoast": "~1.5.4",
-    "angular-sanitize": "~1.4.1"
+    "ngtoast": "~1.5.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
