--- a/package.json
+++ b/package.json
@@ -25,12 +25,7 @@
     "loopback-datasource-juggler": "^2.19.0",
     "serve-favicon": "^2.0.1",
     "strong-express-metrics": "^1.1.0",
-    "newrelic": "^1.20.2"
-  },
-  "optionalDependencies": {
-    "loopback-explorer": "^1.1.0"
-  },
-  "devDependencies": {
+    "newrelic": "^1.20.2",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-bower-requirejs": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
@@ -46,10 +41,12 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.11.1",
     "grunt-newer": "^1.1.0",
+    "load-grunt-tasks": "^3.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-requirejs": "^0.4.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
+    "requirejs": "^2.1.18",
     "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.0",
     "karma-jasmine": "^0.3.5",
@@ -57,16 +54,19 @@
     "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-requirejs": "^0.2.2",
-    "load-grunt-tasks": "^3.1.0",
     "phantomjs": "^1.9.17",
-    "requirejs": "^2.1.18",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^2.2.5"
+  },
+  "optionalDependencies": {
+    "loopback-explorer": "^1.1.0"
+  },
+  "devDependencies": {
     "time-grunt": "^1.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "colors": "^1.1.2",
-    "grunt-mocha-test": "^0.12.7",
     "lodash": "^3.9.3",
-    "mocha": "^2.2.5",
     "selenium-webdriver": "^2.46.1",
     "wd": "^0.3.12"
   },
