--- a/package.json
+++ b/package.json
@@ -78,6 +78,6 @@
   "scripts": {
     "test": "grunt test",
     "start": "node server/server.js",
-    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build"
+    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install && grunt build"
   }
 }
