--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "karma-requirejs": "^0.2.2",
     "phantomjs": "^1.9.17",
     "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "time-grunt": "^1.0.0",
+
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "time-grunt": "^1.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "colors": "^1.1.2",
