--- a/package.json
+++ b/package.json
@@ -46,24 +46,23 @@
     "grunt-requirejs": "^0.4.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
+    "jshint-stylish": "^1.0.0",
+    "grunt-mocha-test": "^0.12.7",
+    "time-grunt": "^1.0.0"
+  },
+  "optionalDependencies": {
+    "loopback-explorer": "^1.1.0"
+  },
+  "devDependencies": {
     "requirejs": "^2.1.18",
     "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^1.0.0",
     "karma-jasmine": "^0.3.5",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-requirejs": "^0.2.2",
     "phantomjs": "^1.9.17",
-    "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.2.5",
-    "time-grunt": "^1.0.0",
-
-  },
-  "optionalDependencies": {
-    "loopback-explorer": "^1.1.0"
-  },
-  "devDependencies": {
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "colors": "^1.1.2",
@@ -79,6 +78,6 @@
   "scripts": {
     "test": "grunt test",
     "start": "node server/server.js",
-    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install && grunt build"
+    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build"
   }
 }
