--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safe-food",
   "description": "Provides info about food recalls based on OpenFDA (https://open.fda.gov/)",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "author": {
     "name": "Incentive Technology Group",
@@ -61,6 +61,7 @@
     "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-requirejs": "^0.2.2",
+    "karma-mocha-reporter": "^0.3.0",
     "phantomjs": "^1.9.17",
     "mocha": "^2.2.5",
     "chai": "^3.0.0",
