--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ cache:
     - node_modules
     - client/vendor
 after_deploy:
-- python test/selenium/*.py
+- python test/selenium/base.py
+- python test/selenium/acceptance.py
